# bitfield

./: CMakeLists.txt  README.md  bitfield.h
cmake/: CompilerOptions.cmake
test/: CMakeLists.txt  test_bitfield.cpp
